update: 1.remove lombok annotations